# name: test_find[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'complete': True,
      'context': <class 'dict'> {
        'user_id': 'test_1',
      },
      'count': 40,
      'created_at': '2015-10-06T20:00:00Z',
      'error': None,
      'file_size': 1024,
      'id': 1,
      'progress': 100,
      'step': 'download',
      'type': 'clone_reference',
    },
    <class 'dict'> {
      'complete': False,
      'context': <class 'dict'> {
        'user_id': 'test_2',
      },
      'count': 30,
      'created_at': '2015-10-06T20:00:00Z',
      'error': None,
      'file_size': 14754,
      'id': 2,
      'progress': 80,
      'step': 'download',
      'type': 'import_reference',
    },
  ]
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'complete': True,
    'context': <class 'dict'> {
      'user_id': 'test_1',
    },
    'count': 40,
    'created_at': '2015-10-06T20:00:00Z',
    'error': None,
    'file_size': 1024,
    'id': 1,
    'progress': 100,
    'step': 'download',
    'type': 'clone_reference',
  }
---
